--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    
 
     <ul class="nav nav-pills">
-      <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Inicio</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Sobre mi</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
       <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link">About</a></li>
@@ -22,12 +22,12 @@
   </header>
 <hr>
 <div class="presentacio">
-  <div class="col-md-7 order-md-2">
+  <div>
     <h2 class="featurette-heading fw-normal lh-1" align="center">Inicio</h2>
-    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
   </div>
-  <div class="col-md-5 order-md-1">
+  <div class="somi">
   <img class="yoyoyo" src="imgref.jpg" width="500px" height="500px">
+  <div><h4>Diego Hermosilla</h4><p>Actual estudiante de 4to Medio en "El Colegio El Belloto"</p></div>
   </div>
 </div>
 <div class="porot">
