--- a/index.html
+++ b/index.html
@@ -1,90 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body> 
-  
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-   
+<body background="carbonmadera.avif" >
+  <header>
+    <div class="px-3 py-2 text-bg-dark border-bottom">
+      <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"></svg>
+          </a>
 
-    <ul class="nav nav-pills">
-      <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Inicio</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Sobre mi</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-    </ul>
+          <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+            <li>
+              <a href="#" class="nav-link text-secondary">
+                <svg class="bi d-block mx-auto mb-1" width="24" height="24" aria-hidden="true"><use xlink:href="#home"></use></svg>
+                Home
+              </a>
+            </li> 
+            <li>
+              <a href="#" class="nav-link text-white">
+                <svg class="bi d-block mx-auto mb-1" width="24" height="24" aria-hidden="true"><use xlink:href="#table"></use></svg>
+                Orders
+              </a>
+            </li>
+            <li>
+              <a href="#" class="nav-link text-white">
+                <svg class="bi d-block mx-auto mb-1" width="24" height="24" aria-hidden="true"><use xlink:href="#grid"></use></svg>
+                Products
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
   </header>
 <hr>
 <div class="presentacio">
-  <div>
-    <h2 class="featurette-heading fw-normal lh-1" align="center">Inicio</h2>
+  <div class="col-md-7 order-md-2">
+    <h1 class="nombree" >Diego Eloy Hermosilla</h1>
+    <hr>
+    <h4>Hispano hablante nativo y nivel medio de ingles, estudiante de 4to Medio en Chile, experiencia basica en el manejo de computadores. Desarrollador independiente en la creacion de videojuegos. Actualmente desarrollando una novela visual.</h4>
+  
   </div>
-  <div class="somi">
+  <div class="col-md-5 order-md-1">
   <img class="yoyoyo" src="imgref.jpg" width="500px" height="500px">
-  <div><h4>Diego Hermosilla</h4><p>Actual estudiante de 4to Medio en "El Colegio El Belloto"</p></div>
   </div>
 </div>
-<div class="porot">
 <hr>
-<h1 align="center">Portafolio</h1>
-<hr>
-</div>
 <div class="imageneportafolioooss row align-items-start">
   <div class="col col-4">
     <div class="card shadow-sm">
-      <img src="scra2.png" width="100%" height="300">
+      <img src="scra1.png" width="100%" height="305">
       <div class="card-body">
-        <h1>Sistema Solar</h1>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Tipico juego de pong con el puntaje ganador siendo 7. Se puede aumentar y disminuir el tamaño de los paneles y cambiar el mapa de fondo.</p>
+        <div class="d-flex justify-content-between align-items-center">
+        </div>
       </div>
     </div>
   </div>
   <div class="col col-4">
     <div class="card shadow-sm">
-     <img src="scra1.png" width="100%" height="300">  
+      <img src="scra3.png" width="100%" height="305">
       <div class="card-body">
-        <h1>Ping-Pong</h1>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text">Laberinto con ratones automatizado. Los ratones tienen sensores en los bigotes para saber a que direccion deben de cambiar para llegar a la meta.</p>
+        <div class="d-flex justify-content-between align-items-center">
+          
+        </div>
       </div>
     </div>
   </div>
-</div>
-  <div>
+  <div class="col col-4">
+    <div class="card shadow-sm">
+      <img src="scra2.png" width="100%" height="305">
+      <div class="card-body">
+        <p class="card-text">Simulador simple del sistema solar. Contiene dos planetas y una luna que dejan un rastro a la vez que van avanzando de manera ovalada.</p>
+        <div class="d-flex justify-content-between align-items-center">
+          
+        </div>
+      </div>
+    </div>
+  </div>
     <div class="contasto">
       <h4 class="mb-3">Contacto</h4>
       <form class="needs-validation" novalidate="">
         <div class="row g-3">
           <div class="col-sm-6">
-            <label for="firstName" class="form-label">Nombre</label>
+            <label for="firstName" class="see">First name</label>
             <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
             <div class="invalid-feedback">
-              Se requiere nombre valido.
+              Valid first name is required.
             </div>
           </div>
 
           <div class="col-sm-6">
-            <label for="lastName" class="form-label">Apellido </label>
+            <label for="lastName" class="see">Last name</label>
             <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
             <div class="invalid-feedback">
-              Se requiere apellido valido.
+              Valid last name is required.
             </div>
           </div>
 
           <div class="col-12">
-            <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
+            <label for="email" class="see">Email <span class="text-body-secondary">(Optional)</span></label>
             <input type="email" class="form-control" id="email" placeholder="you@example.com">
             <div class="invalid-feedback">
-              Coloca una direccion de correo valida.
+              Please enter a valid email address .
 
       </form>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> 
 </body>
 </html>
