--- a/index.html
+++ b/index.html
@@ -87,6 +87,47 @@
       </div>
     </div>
   </div>
+  <hr>
+    <div class="col col-4">
+    <div class="card shadow-sm">
+      <img src="eeeeeeeeeepresupuesto.png" width="100%" height="205">
+      <div class="card-body">
+        <p class="card-text">Pagina para calcular presupuesto en base a ingresos y egresos.</p>
+        <hr class="elunicohrconclass">
+        <p>Esta pagina fue dificil de hacer, sin embargo fue divertida a pesar de ser una de las primeras experiencias que he tenido haciendo una pagina web "funcional"</p>
+        <hr class="elunicohrconclass">
+        <a href="https://github.com/Enkv/AppPresupuesto.git">Link Repositorio</a>
+        <div class="d-flex justify-content-between align-items-center">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--
+  <div class="col col-4">
+    <div class="card shadow-sm">
+      <img src="scra3.png" width="100%" height="305">
+      <div class="card-body">
+        <p class="card-text">Laberinto con ratones automatizado. Los ratones tienen sensores en los bigotes para saber a que direccion deben de cambiar para llegar a la meta.</p>
+        <div class="d-flex justify-content-between align-items-center">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col col-4">
+    <div class="card shadow-sm">
+      <img src="scra2.png" width="100%" height="305">
+      <div class="card-body">
+        <p class="card-text">Simulador simple del sistema solar. Contiene dos planetas y una luna que dejan un rastro a la vez que van avanzando de manera ovalada.</p>
+        <div class="d-flex justify-content-between align-items-center">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+-->
+  <hr>
     <div class="contasto">
       <h4 class="mb-3">Contacto</h4>
       <form class="needs-validation" novalidate="">
@@ -115,7 +156,7 @@
 
       </form>
     </div>
-  </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script> 
 </body>
 </html>
